@@ -1,5 +1,12 @@
 2005-08-13  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/downloader-view.c: (update_download_row):
+
+	Don't display (guint64)-1 as filesize if it's not known yet.
+	Part of bug #313215.
+
+2005-08-13  Christian Persch  <chpe@cvs.gnome.org>
+
 	* configure.ac:
 
 	Better gecko version check.
